# World-in-a-Pie

./: .env.pi.example  .env.pi.minimal.example  .env.prod.example  .env.production.example  .gitignore  .shellcheckrc  CLAUDE.md  ImportOfRecordsWithReferences.md  LICENSE  LocalhostRedirectInBothMode.md  README.md  TerminologyImportPerformanceImprovement.md  benchmark.json  commits.md  docker-compose.app.clintrial.yml  docker-compose.app.dnd.yml  docker-compose.app.react-console.yml  docker-compose.infra.minimal.yml  docker-compose.infra.pi.minimal.yml  docker-compose.infra.pi.yml  docker-compose.infra.prod.yml  docker-compose.infra.yml  docker-compose.production.yml  eslint.config.js  faq.md  k8s-installation_log.md  owl-support-v2.md  pyproject.toml  results.json  vulture_allowlist.py
WIP-Toolkit/: pyproject.toml
WIP-Toolkit/src/wip_toolkit/: __init__.py  _progress.py  archive.py  backfill.py  cli.py  client.py  config.py  models.py  seed.py  status.py
WIP-Toolkit/src/wip_toolkit/export/: closure.py  collector.py  exporter.py
WIP-Toolkit/src/wip_toolkit/import_/: fresh.py  importer.py  remap.py  restore.py
WIP-Toolkit/tests/: conftest.py  test_archive.py  test_backfill.py  test_cli.py  test_client.py  test_closure.py  test_collector.py  test_config.py  test_exporter.py  test_fresh.py  test_importer.py  test_models.py  test_remap.py  test_restore.py  test_status.py
components/mcp-server/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  tools.yaml  wip-component.yaml
components/mcp-server/scripts/: generate_schemas.py
components/mcp-server/src/wip_mcp/: __init__.py  __main__.py  _generated_schemas.py  client.py  server.py
components/mcp-server/tests/: conftest.py  test_client.py  test_client_contracts.py  test_client_terminology.py  test_describe_data_model.py  test_read_only_mode.py  test_terminology_tools.py  test_tools.py  test_transports.py
config/: api-keys.dev.json  api-keys.example.json
deployer/: pyproject.toml
deployer/src/wip_deploy/: __init__.py  app_registry.py  apply.py  build.py  check_app.py  cli.py  discovery.py  export_ca.py  import_bundle.py  nuke.py  preflight.py  secrets.py  status.py  validate_manifest.py
deployer/src/wip_deploy/config_gen/: __init__.py  caddy.py  dex.py  env.py  nginx_ingress.py  router.py  routing.py  spec_context.py
deployer/src/wip_deploy/presets/: __init__.py  analytics.py  core.py  full.py  headless.py  standard.py
deployer/src/wip_deploy/renderers/: __init__.py  base.py  compose.py  compose_caddy.py  compose_dex.py  dev_simple.py  k8s.py  router_caddy.py
deployer/src/wip_deploy/secrets_backend/: __init__.py  base.py  file.py
deployer/src/wip_deploy/spec/: __init__.py  _base.py  activation.py  app.py  component.py  deployment.py  validators.py
deployer/tests/unit/: test_apply_compose.py  test_apply_k8s.py  test_apply_rebuild.py  test_build.py  test_case_313.py  test_case_331.py  test_case_353.py  test_case_355.py  test_case_356.py  test_case_358.py  test_case_359.py  test_case_360.py  test_case_373_cli.py  test_case_373_parser.py  test_case_373_renderer.py  test_case_379.py  test_cli.py  test_discovery.py  test_nuke.py  test_preflight.py  test_secrets.py  test_secrets_backend.py  test_status.py
deployer/tests/unit/config_gen/: conftest.py  test_caddy_ingress.py  test_case_361.py  test_dex.py  test_env.py  test_router.py  test_routing.py  test_spec_context.py
deployer/tests/unit/renderers/: test_compose.py  test_dev_simple.py  test_k8s.py
deployer/tests/unit/spec/: conftest.py  test_activation.py  test_component.py  test_deployment.py  test_real_manifests.py  test_validators.py
docker-compose/: base.yml
docs/: 2025-02-03-oidc-architecture-fix.md  AI-Assisted-Development.md  AI-Assisted-Development_old.md  HOW-TO.md  Vision.md  WIP_AppSetup_Guide.md  WIP_ClientLibrary_Spec.docx  WIP_ClientLibrary_Spec.md  WIP_DevGuardrails.docx  WIP_DevGuardrails.md  WIP_PoNIFs.md  WIP_TwoTheses.docx  WIP_TwoTheses.md  WIP_UseCase_Energy.docx  WIP_UseCase_Energy.md  WIP_UseCase_FictionalUniverses.md  WIP_UseCase_FictionalUniverses_v2.md  WIP_UseCase_HomeManagement.docx  WIP_UseCase_HomeManagement.md  WIP_UseCase_PersonalFinance.docx  WIP_UseCase_PersonalFinance.md  WIP_UseCase_Vehicle.docx  WIP_UseCase_Vehicle.md  faq.md  (+40 more)
libs/wip-auth/: README.md  pyproject.toml
libs/wip-auth/src/wip_auth/: __init__.py  bulk_models.py  config.py  dependencies.py  document_identity.py  fastapi_helpers.py  identity.py  key_sync.py  middleware.py  models.py  permissions.py  query_validation.py  ratelimit.py  registry_client.py  resolve.py  security.py  startup.py
libs/wip-auth/src/wip_auth/providers/: __init__.py  api_key.py  base.py  none.py  oidc.py  trusted_header.py
libs/wip-auth/tests/: __init__.py  test_case_351.py  test_config.py  test_document_identity_contract.py  test_fastapi_helpers.py  test_identity.py  test_integration.py  test_key_sync.py  test_namespace_filter.py  test_oidc.py  test_providers.py  test_resolve.py  test_startup.py  test_trusted_header.py  test_user_identity.py
(+812 files in other folders)
