[project]
name = "wip-toolkit"
version = "0.5.0"
description = "Backup, migration, and data management toolkit for World In a Pie (WIP)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
wip-toolkit = "wip_toolkit.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
