[project]
name = "wip-deploy"
version = "2.0.0a0"
description = "WIP declarative deployment system (v2)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "typer>=0.12.0,<1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.26.0,<0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML",
]

[project.scripts]
wip-deploy = "wip_deploy.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
