[project]
name = "wip-mcp"
version = "0.1.0"
description = "MCP server for World In a Pie — AI-assisted development interface"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0,<2.0.0",
    "httpx>=0.26.0,<0.28.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
wip-mcp = "wip_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
