[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wip-auth"
version = "0.1.0"
description = "Pluggable authentication library for World In a Pie (WIP)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "WIP Team" }
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wip_auth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
